--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ body {
 <script>
 // Change this constant to 'yes', 'no', or 'kinda'
 const CURRENT_STATUS = 'kinda';
-const CURRENT_LABEL = 'I mean he's not healthy'
+const CURRENT_LABEL = 'I mean he's not healthy';
 
 const box = document.querySelector('.status-box');
 const label = document.getElementById('status-label');
